--- a/GCrework.css
+++ b/GCrework.css
@@ -1,7 +1,3 @@
-.tooltip_templates {
-	display: none;
-}
-
 .sidePanel {
 	width:15%;
 /*	float:left;
@@ -9,6 +5,10 @@
 */
 	position:fixed;
 	left:0px;
+}
+
+.left-text {
+	text-align:left !important;
 }
 
 .logPanel {
