Tidied notes and comments
Also added more rows to html sidebar. Altered sidepanel to include more formations

--- a/GCrework.css
+++ b/GCrework.css
@@ -1,9 +1,7 @@
 .sidePanel {
 	width:15%;
-/*	float:left;
-	clear:both;
-*/
-	position:fixed;
+	position:absolute;
+	top:64px;
 	left:0px;
 }
 
@@ -13,7 +11,7 @@
 
 .logPanel {
 	width:15%;
-	position:fixed;
+	position:absolute;
 	right:0px;
 	top:64px;
 }
